--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
